Updating to build for Liferay CE 6.1.1 GA2