@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2010 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -21,7 +21,7 @@ import com.dharma.model.impl.PMBlockedUserImpl;
 import com.dharma.model.impl.PMBlockedUserModelImpl;
 
 import com.liferay.portal.NoSuchModelException;
-import com.liferay.portal.kernel.annotation.BeanReference;
+import com.liferay.portal.kernel.bean.BeanReference;
 import com.liferay.portal.kernel.cache.CacheRegistryUtil;
 import com.liferay.portal.kernel.dao.orm.EntityCacheUtil;
 import com.liferay.portal.kernel.dao.orm.FinderCacheUtil;
@@ -36,9 +36,12 @@ import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.InstanceFactory;
 import com.liferay.portal.kernel.util.OrderByComparator;
+import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.PropsUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.model.CacheModel;
 import com.liferay.portal.model.ModelListener;
 import com.liferay.portal.service.persistence.BatchSessionUtil;
 import com.liferay.portal.service.persistence.ResourcePersistence;
@@ -55,10 +58,6 @@ import java.util.List;
  * The persistence implementation for the p m blocked user service.
  *
  * <p>
- * Never modify or reference this class directly. Always use {@link PMBlockedUserUtil} to access the p m blocked user persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
- * </p>
- *
- * <p>
  * Caching information and settings can be found in <code>portal.properties</code>
  * </p>
  *
@@ -69,65 +68,97 @@ import java.util.List;
  */
 public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedUser>
 	implements PMBlockedUserPersistence {
+	/*
+	 * NOTE FOR DEVELOPERS:
+	 *
+	 * Never modify or reference this class directly. Always use {@link PMBlockedUserUtil} to access the p m blocked user persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
+	 */
 	public static final String FINDER_CLASS_NAME_ENTITY = PMBlockedUserImpl.class.getName();
-	public static final String FINDER_CLASS_NAME_LIST = FINDER_CLASS_NAME_ENTITY +
-		".List";
-	public static final FinderPath FINDER_PATH_FIND_BY_OWNERANDUSER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+	public static final String FINDER_CLASS_NAME_LIST_WITH_PAGINATION = FINDER_CLASS_NAME_ENTITY +
+		".List1";
+	public static final String FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION = FINDER_CLASS_NAME_ENTITY +
+		".List2";
+	public static final FinderPath FINDER_PATH_WITH_PAGINATION_FIND_BY_OWNERANDUSER =
+		new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "findByOwnerAndUser",
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITH_PAGINATION,
+			"findByOwnerAndUser",
 			new String[] {
 				Long.class.getName(), Long.class.getName(),
 				
 			"java.lang.Integer", "java.lang.Integer",
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
+	public static final FinderPath FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNERANDUSER =
+		new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION,
+			"findByOwnerAndUser",
+			new String[] { Long.class.getName(), Long.class.getName() },
+			PMBlockedUserModelImpl.OWNERID_COLUMN_BITMASK |
+			PMBlockedUserModelImpl.USERID_COLUMN_BITMASK);
 	public static final FinderPath FINDER_PATH_COUNT_BY_OWNERANDUSER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "countByOwnerAndUser",
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION, "countByOwnerAndUser",
 			new String[] { Long.class.getName(), Long.class.getName() });
-	public static final FinderPath FINDER_PATH_FIND_BY_OWNER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+	public static final FinderPath FINDER_PATH_WITH_PAGINATION_FIND_BY_OWNER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "findByOwner",
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITH_PAGINATION,
+			"findByOwner",
 			new String[] {
 				Long.class.getName(),
 				
 			"java.lang.Integer", "java.lang.Integer",
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
+	public static final FinderPath FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION,
+			"findByOwner", new String[] { Long.class.getName() },
+			PMBlockedUserModelImpl.OWNERID_COLUMN_BITMASK);
 	public static final FinderPath FINDER_PATH_COUNT_BY_OWNER = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "countByOwner",
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION, "countByOwner",
 			new String[] { Long.class.getName() });
-	public static final FinderPath FINDER_PATH_FIND_ALL = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+	public static final FinderPath FINDER_PATH_WITH_PAGINATION_FIND_ALL = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "findAll", new String[0]);
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITH_PAGINATION,
+			"findAll", new String[0]);
+	public static final FinderPath FINDER_PATH_WITHOUT_PAGINATION_FIND_ALL = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
+			PMBlockedUserImpl.class, FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION,
+			"findAll", new String[0]);
 	public static final FinderPath FINDER_PATH_COUNT_ALL = new FinderPath(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "countAll", new String[0]);
+			PMBlockedUserModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION, "countAll", new String[0]);
 
 	/**
 	 * Caches the p m blocked user in the entity cache if it is enabled.
 	 *
-	 * @param pmBlockedUser the p m blocked user to cache
+	 * @param pmBlockedUser the p m blocked user
 	 */
 	public void cacheResult(PMBlockedUser pmBlockedUser) {
 		EntityCacheUtil.putResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey(),
 			pmBlockedUser);
+
+		pmBlockedUser.resetOriginalValues();
 	}
 
 	/**
 	 * Caches the p m blocked users in the entity cache if it is enabled.
 	 *
-	 * @param pmBlockedUsers the p m blocked users to cache
+	 * @param pmBlockedUsers the p m blocked users
 	 */
 	public void cacheResult(List<PMBlockedUser> pmBlockedUsers) {
 		for (PMBlockedUser pmBlockedUser : pmBlockedUsers) {
 			if (EntityCacheUtil.getResult(
 						PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-						PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey(),
-						this) == null) {
+						PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey()) == null) {
 				cacheResult(pmBlockedUser);
+			}
+			else {
+				pmBlockedUser.resetOriginalValues();
 			}
 		}
 	}
@@ -139,11 +170,17 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
+	@Override
 	public void clearCache() {
-		CacheRegistryUtil.clear(PMBlockedUserImpl.class.getName());
+		if (_HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE) {
+			CacheRegistryUtil.clear(PMBlockedUserImpl.class.getName());
+		}
+
 		EntityCacheUtil.clearCache(PMBlockedUserImpl.class.getName());
+
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_ENTITY);
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
 	}
 
 	/**
@@ -153,9 +190,24 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
+	@Override
 	public void clearCache(PMBlockedUser pmBlockedUser) {
 		EntityCacheUtil.removeResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey());
+
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+	}
+
+	@Override
+	public void clearCache(List<PMBlockedUser> pmBlockedUsers) {
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+
+		for (PMBlockedUser pmBlockedUser : pmBlockedUsers) {
+			EntityCacheUtil.removeResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+				PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey());
+		}
 	}
 
 	/**
@@ -176,25 +228,26 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	/**
 	 * Removes the p m blocked user with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param primaryKey the primary key of the p m blocked user to remove
-	 * @return the p m blocked user that was removed
-	 * @throws com.liferay.portal.NoSuchModelException if a p m blocked user with the primary key could not be found
-	 * @throws SystemException if a system exception occurred
-	 */
-	public PMBlockedUser remove(Serializable primaryKey)
-		throws NoSuchModelException, SystemException {
-		return remove(((Long)primaryKey).longValue());
-	}
-
-	/**
-	 * Removes the p m blocked user with the primary key from the database. Also notifies the appropriate model listeners.
-	 *
-	 * @param blockedUserId the primary key of the p m blocked user to remove
+	 * @param blockedUserId the primary key of the p m blocked user
 	 * @return the p m blocked user that was removed
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public PMBlockedUser remove(long blockedUserId)
+		throws NoSuchPMBlockedUserException, SystemException {
+		return remove(Long.valueOf(blockedUserId));
+	}
+
+	/**
+	 * Removes the p m blocked user with the primary key from the database. Also notifies the appropriate model listeners.
+	 *
+	 * @param primaryKey the primary key of the p m blocked user
+	 * @return the p m blocked user that was removed
+	 * @throws com.dharma.NoSuchPMBlockedUserException if a p m blocked user with the primary key could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	@Override
+	public PMBlockedUser remove(Serializable primaryKey)
 		throws NoSuchPMBlockedUserException, SystemException {
 		Session session = null;
 
@@ -202,15 +255,15 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			session = openSession();
 
 			PMBlockedUser pmBlockedUser = (PMBlockedUser)session.get(PMBlockedUserImpl.class,
-					new Long(blockedUserId));
+					primaryKey);
 
 			if (pmBlockedUser == null) {
 				if (_log.isWarnEnabled()) {
-					_log.warn(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY + blockedUserId);
+					_log.warn(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY + primaryKey);
 				}
 
 				throw new NoSuchPMBlockedUserException(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY +
-					blockedUserId);
+					primaryKey);
 			}
 
 			return remove(pmBlockedUser);
@@ -226,6 +279,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		}
 	}
 
+	@Override
 	protected PMBlockedUser removeImpl(PMBlockedUser pmBlockedUser)
 		throws SystemException {
 		pmBlockedUser = toUnwrappedModel(pmBlockedUser);
@@ -235,18 +289,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		try {
 			session = openSession();
 
-			if (pmBlockedUser.isCachedModel() || BatchSessionUtil.isEnabled()) {
-				Object staleObject = session.get(PMBlockedUserImpl.class,
-						pmBlockedUser.getPrimaryKeyObj());
-
-				if (staleObject != null) {
-					session.evict(staleObject);
-				}
-			}
-
-			session.delete(pmBlockedUser);
-
-			session.flush();
+			BatchSessionUtil.delete(session, pmBlockedUser);
 		}
 		catch (Exception e) {
 			throw processException(e);
@@ -255,18 +298,20 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			closeSession(session);
 		}
 
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
-
-		EntityCacheUtil.removeResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-			PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey());
+		clearCache(pmBlockedUser);
 
 		return pmBlockedUser;
 	}
 
+	@Override
 	public PMBlockedUser updateImpl(
 		com.dharma.model.PMBlockedUser pmBlockedUser, boolean merge)
 		throws SystemException {
 		pmBlockedUser = toUnwrappedModel(pmBlockedUser);
+
+		boolean isNew = pmBlockedUser.isNew();
+
+		PMBlockedUserModelImpl pmBlockedUserModelImpl = (PMBlockedUserModelImpl)pmBlockedUser;
 
 		Session session = null;
 
@@ -284,7 +329,55 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			closeSession(session);
 		}
 
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+
+		if (isNew || !PMBlockedUserModelImpl.COLUMN_BITMASK_ENABLED) {
+			FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+		}
+
+		else {
+			if ((pmBlockedUserModelImpl.getColumnBitmask() &
+					FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNERANDUSER.getColumnBitmask()) != 0) {
+				Object[] args = new Object[] {
+						Long.valueOf(pmBlockedUserModelImpl.getOriginalOwnerId()),
+						Long.valueOf(pmBlockedUserModelImpl.getOriginalUserId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_OWNERANDUSER,
+					args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNERANDUSER,
+					args);
+
+				args = new Object[] {
+						Long.valueOf(pmBlockedUserModelImpl.getOwnerId()),
+						Long.valueOf(pmBlockedUserModelImpl.getUserId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_OWNERANDUSER,
+					args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNERANDUSER,
+					args);
+			}
+
+			if ((pmBlockedUserModelImpl.getColumnBitmask() &
+					FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNER.getColumnBitmask()) != 0) {
+				Object[] args = new Object[] {
+						Long.valueOf(pmBlockedUserModelImpl.getOriginalOwnerId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_OWNER, args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNER,
+					args);
+
+				args = new Object[] {
+						Long.valueOf(pmBlockedUserModelImpl.getOwnerId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_OWNER, args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNER,
+					args);
+			}
+		}
 
 		EntityCacheUtil.putResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
 			PMBlockedUserImpl.class, pmBlockedUser.getPrimaryKey(),
@@ -312,22 +405,23 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds the p m blocked user with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
+	 * Returns the p m blocked user with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the p m blocked user to find
+	 * @param primaryKey the primary key of the p m blocked user
 	 * @return the p m blocked user
 	 * @throws com.liferay.portal.NoSuchModelException if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
+	@Override
 	public PMBlockedUser findByPrimaryKey(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return findByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Finds the p m blocked user with the primary key or throws a {@link com.dharma.NoSuchPMBlockedUserException} if it could not be found.
+	 * Returns the p m blocked user with the primary key or throws a {@link com.dharma.NoSuchPMBlockedUserException} if it could not be found.
 	 *
-	 * @param blockedUserId the primary key of the p m blocked user to find
+	 * @param blockedUserId the primary key of the p m blocked user
 	 * @return the p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -349,44 +443,58 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds the p m blocked user with the primary key or returns <code>null</code> if it could not be found.
+	 * Returns the p m blocked user with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the p m blocked user to find
+	 * @param primaryKey the primary key of the p m blocked user
 	 * @return the p m blocked user, or <code>null</code> if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
+	@Override
 	public PMBlockedUser fetchByPrimaryKey(Serializable primaryKey)
 		throws SystemException {
 		return fetchByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Finds the p m blocked user with the primary key or returns <code>null</code> if it could not be found.
+	 * Returns the p m blocked user with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param blockedUserId the primary key of the p m blocked user to find
+	 * @param blockedUserId the primary key of the p m blocked user
 	 * @return the p m blocked user, or <code>null</code> if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public PMBlockedUser fetchByPrimaryKey(long blockedUserId)
 		throws SystemException {
 		PMBlockedUser pmBlockedUser = (PMBlockedUser)EntityCacheUtil.getResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
-				PMBlockedUserImpl.class, blockedUserId, this);
+				PMBlockedUserImpl.class, blockedUserId);
+
+		if (pmBlockedUser == _nullPMBlockedUser) {
+			return null;
+		}
 
 		if (pmBlockedUser == null) {
 			Session session = null;
+
+			boolean hasException = false;
 
 			try {
 				session = openSession();
 
 				pmBlockedUser = (PMBlockedUser)session.get(PMBlockedUserImpl.class,
-						new Long(blockedUserId));
+						Long.valueOf(blockedUserId));
 			}
 			catch (Exception e) {
+				hasException = true;
+
 				throw processException(e);
 			}
 			finally {
 				if (pmBlockedUser != null) {
 					cacheResult(pmBlockedUser);
+				}
+				else if (!hasException) {
+					EntityCacheUtil.putResult(PMBlockedUserModelImpl.ENTITY_CACHE_ENABLED,
+						PMBlockedUserImpl.class, blockedUserId,
+						_nullPMBlockedUser);
 				}
 
 				closeSession(session);
@@ -397,10 +505,10 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds all the p m blocked users where ownerId = &#63; and userId = &#63;.
+	 * Returns all the p m blocked users where ownerId = &#63; and userId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
 	 * @return the matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -411,16 +519,16 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds a range of all the p m blocked users where ownerId = &#63; and userId = &#63;.
+	 * Returns a range of all the p m blocked users where ownerId = &#63; and userId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
 	 * @return the range of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -430,65 +538,86 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds an ordered range of all the p m blocked users where ownerId = &#63; and userId = &#63;.
+	 * Returns an ordered range of all the p m blocked users where ownerId = &#63; and userId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
-	 * @param orderByComparator the comparator to order the results by
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
+	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
 	 * @return the ordered range of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<PMBlockedUser> findByOwnerAndUser(long ownerId, long userId,
 		int start, int end, OrderByComparator orderByComparator)
 		throws SystemException {
-		Object[] finderArgs = new Object[] {
-				ownerId, userId,
-				
-				String.valueOf(start), String.valueOf(end),
-				String.valueOf(orderByComparator)
-			};
+		FinderPath finderPath = null;
+		Object[] finderArgs = null;
 
-		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_OWNERANDUSER,
+		if ((start == QueryUtil.ALL_POS) && (end == QueryUtil.ALL_POS) &&
+				(orderByComparator == null)) {
+			finderPath = FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNERANDUSER;
+			finderArgs = new Object[] { ownerId, userId };
+		}
+		else {
+			finderPath = FINDER_PATH_WITH_PAGINATION_FIND_BY_OWNERANDUSER;
+			finderArgs = new Object[] {
+					ownerId, userId,
+					
+					start, end, orderByComparator
+				};
+		}
+
+		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(finderPath,
 				finderArgs, this);
 
+		if ((list != null) && !list.isEmpty()) {
+			for (PMBlockedUser pmBlockedUser : list) {
+				if ((ownerId != pmBlockedUser.getOwnerId()) ||
+						(userId != pmBlockedUser.getUserId())) {
+					list = null;
+
+					break;
+				}
+			}
+		}
+
 		if (list == null) {
+			StringBundler query = null;
+
+			if (orderByComparator != null) {
+				query = new StringBundler(4 +
+						(orderByComparator.getOrderByFields().length * 3));
+			}
+			else {
+				query = new StringBundler(4);
+			}
+
+			query.append(_SQL_SELECT_PMBLOCKEDUSER_WHERE);
+
+			query.append(_FINDER_COLUMN_OWNERANDUSER_OWNERID_2);
+
+			query.append(_FINDER_COLUMN_OWNERANDUSER_USERID_2);
+
+			if (orderByComparator != null) {
+				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
+					orderByComparator);
+			}
+
+			else {
+				query.append(PMBlockedUserModelImpl.ORDER_BY_JPQL);
+			}
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = null;
-
-				if (orderByComparator != null) {
-					query = new StringBundler(4 +
-							(orderByComparator.getOrderByFields().length * 3));
-				}
-				else {
-					query = new StringBundler(4);
-				}
-
-				query.append(_SQL_SELECT_PMBLOCKEDUSER_WHERE);
-
-				query.append(_FINDER_COLUMN_OWNERANDUSER_OWNERID_2);
-
-				query.append(_FINDER_COLUMN_OWNERANDUSER_USERID_2);
-
-				if (orderByComparator != null) {
-					appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-						orderByComparator);
-				}
-
-				else {
-					query.append(PMBlockedUserModelImpl.ORDER_BY_JPQL);
-				}
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -506,13 +635,13 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			}
 			finally {
 				if (list == null) {
-					list = new ArrayList<PMBlockedUser>();
+					FinderCacheUtil.removeResult(finderPath, finderArgs);
 				}
+				else {
+					cacheResult(list);
 
-				cacheResult(list);
-
-				FinderCacheUtil.putResult(FINDER_PATH_FIND_BY_OWNERANDUSER,
-					finderArgs, list);
+					FinderCacheUtil.putResult(finderPath, finderArgs, list);
+				}
 
 				closeSession(session);
 			}
@@ -522,15 +651,11 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds the first p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
+	 * Returns the first p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the first matching p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a matching p m blocked user could not be found
 	 * @throws SystemException if a system exception occurred
@@ -538,39 +663,55 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	public PMBlockedUser findByOwnerAndUser_First(long ownerId, long userId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMBlockedUserException, SystemException {
-		List<PMBlockedUser> list = findByOwnerAndUser(ownerId, userId, 0, 1,
-				orderByComparator);
+		PMBlockedUser pmBlockedUser = fetchByOwnerAndUser_First(ownerId,
+				userId, orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(6);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("ownerId=");
-			msg.append(ownerId);
-
-			msg.append(", userId=");
-			msg.append(userId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMBlockedUserException(msg.toString());
+		if (pmBlockedUser != null) {
+			return pmBlockedUser;
 		}
-		else {
-			return list.get(0);
-		}
+
+		StringBundler msg = new StringBundler(6);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("ownerId=");
+		msg.append(ownerId);
+
+		msg.append(", userId=");
+		msg.append(userId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMBlockedUserException(msg.toString());
 	}
 
 	/**
-	 * Finds the last p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
+	 * Returns the first p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the first matching p m blocked user, or <code>null</code> if a matching p m blocked user could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMBlockedUser fetchByOwnerAndUser_First(long ownerId, long userId,
+		OrderByComparator orderByComparator) throws SystemException {
+		List<PMBlockedUser> list = findByOwnerAndUser(ownerId, userId, 0, 1,
+				orderByComparator);
+
+		if (!list.isEmpty()) {
+			return list.get(0);
+		}
+
+		return null;
+	}
+
+	/**
+	 * Returns the last p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the last matching p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a matching p m blocked user could not be found
 	 * @throws SystemException if a system exception occurred
@@ -578,42 +719,58 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	public PMBlockedUser findByOwnerAndUser_Last(long ownerId, long userId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMBlockedUserException, SystemException {
+		PMBlockedUser pmBlockedUser = fetchByOwnerAndUser_Last(ownerId, userId,
+				orderByComparator);
+
+		if (pmBlockedUser != null) {
+			return pmBlockedUser;
+		}
+
+		StringBundler msg = new StringBundler(6);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("ownerId=");
+		msg.append(ownerId);
+
+		msg.append(", userId=");
+		msg.append(userId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMBlockedUserException(msg.toString());
+	}
+
+	/**
+	 * Returns the last p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
+	 *
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the last matching p m blocked user, or <code>null</code> if a matching p m blocked user could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMBlockedUser fetchByOwnerAndUser_Last(long ownerId, long userId,
+		OrderByComparator orderByComparator) throws SystemException {
 		int count = countByOwnerAndUser(ownerId, userId);
 
 		List<PMBlockedUser> list = findByOwnerAndUser(ownerId, userId,
 				count - 1, count, orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(6);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("ownerId=");
-			msg.append(ownerId);
-
-			msg.append(", userId=");
-			msg.append(userId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMBlockedUserException(msg.toString());
-		}
-		else {
+		if (!list.isEmpty()) {
 			return list.get(0);
 		}
+
+		return null;
 	}
 
 	/**
-	 * Finds the p m blocked users before and after the current p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * Returns the p m blocked users before and after the current p m blocked user in the ordered set where ownerId = &#63; and userId = &#63;.
 	 *
 	 * @param blockedUserId the primary key of the current p m blocked user
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the previous, current, and next p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -668,17 +825,17 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		query.append(_FINDER_COLUMN_OWNERANDUSER_USERID_2);
 
 		if (orderByComparator != null) {
-			String[] orderByFields = orderByComparator.getOrderByFields();
+			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
 
-			if (orderByFields.length > 0) {
+			if (orderByConditionFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByFields.length; i++) {
+			for (int i = 0; i < orderByConditionFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByFields[i]);
+				query.append(orderByConditionFields[i]);
 
-				if ((i + 1) < orderByFields.length) {
+				if ((i + 1) < orderByConditionFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -697,6 +854,8 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			}
 
 			query.append(ORDER_BY_CLAUSE);
+
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -739,7 +898,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		qPos.add(userId);
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByValues(pmBlockedUser);
+			Object[] values = orderByComparator.getOrderByConditionValues(pmBlockedUser);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -757,9 +916,9 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds all the p m blocked users where ownerId = &#63;.
+	 * Returns all the p m blocked users where ownerId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
+	 * @param ownerId the owner ID
 	 * @return the matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -769,15 +928,15 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds a range of all the p m blocked users where ownerId = &#63;.
+	 * Returns a range of all the p m blocked users where ownerId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
+	 * @param ownerId the owner ID
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
 	 * @return the range of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -787,61 +946,77 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds an ordered range of all the p m blocked users where ownerId = &#63;.
+	 * Returns an ordered range of all the p m blocked users where ownerId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
-	 * @param orderByComparator the comparator to order the results by
+	 * @param ownerId the owner ID
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
+	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
 	 * @return the ordered range of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<PMBlockedUser> findByOwner(long ownerId, int start, int end,
 		OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] {
-				ownerId,
-				
-				String.valueOf(start), String.valueOf(end),
-				String.valueOf(orderByComparator)
-			};
+		FinderPath finderPath = null;
+		Object[] finderArgs = null;
 
-		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_OWNER,
+		if ((start == QueryUtil.ALL_POS) && (end == QueryUtil.ALL_POS) &&
+				(orderByComparator == null)) {
+			finderPath = FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_OWNER;
+			finderArgs = new Object[] { ownerId };
+		}
+		else {
+			finderPath = FINDER_PATH_WITH_PAGINATION_FIND_BY_OWNER;
+			finderArgs = new Object[] { ownerId, start, end, orderByComparator };
+		}
+
+		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(finderPath,
 				finderArgs, this);
 
+		if ((list != null) && !list.isEmpty()) {
+			for (PMBlockedUser pmBlockedUser : list) {
+				if ((ownerId != pmBlockedUser.getOwnerId())) {
+					list = null;
+
+					break;
+				}
+			}
+		}
+
 		if (list == null) {
+			StringBundler query = null;
+
+			if (orderByComparator != null) {
+				query = new StringBundler(3 +
+						(orderByComparator.getOrderByFields().length * 3));
+			}
+			else {
+				query = new StringBundler(3);
+			}
+
+			query.append(_SQL_SELECT_PMBLOCKEDUSER_WHERE);
+
+			query.append(_FINDER_COLUMN_OWNER_OWNERID_2);
+
+			if (orderByComparator != null) {
+				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
+					orderByComparator);
+			}
+
+			else {
+				query.append(PMBlockedUserModelImpl.ORDER_BY_JPQL);
+			}
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = null;
-
-				if (orderByComparator != null) {
-					query = new StringBundler(3 +
-							(orderByComparator.getOrderByFields().length * 3));
-				}
-				else {
-					query = new StringBundler(3);
-				}
-
-				query.append(_SQL_SELECT_PMBLOCKEDUSER_WHERE);
-
-				query.append(_FINDER_COLUMN_OWNER_OWNERID_2);
-
-				if (orderByComparator != null) {
-					appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-						orderByComparator);
-				}
-
-				else {
-					query.append(PMBlockedUserModelImpl.ORDER_BY_JPQL);
-				}
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -857,13 +1032,13 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			}
 			finally {
 				if (list == null) {
-					list = new ArrayList<PMBlockedUser>();
+					FinderCacheUtil.removeResult(finderPath, finderArgs);
 				}
+				else {
+					cacheResult(list);
 
-				cacheResult(list);
-
-				FinderCacheUtil.putResult(FINDER_PATH_FIND_BY_OWNER,
-					finderArgs, list);
+					FinderCacheUtil.putResult(finderPath, finderArgs, list);
+				}
 
 				closeSession(session);
 			}
@@ -873,14 +1048,10 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds the first p m blocked user in the ordered set where ownerId = &#63;.
+	 * Returns the first p m blocked user in the ordered set where ownerId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param ownerId the owner id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the first matching p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a matching p m blocked user could not be found
 	 * @throws SystemException if a system exception occurred
@@ -888,34 +1059,49 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	public PMBlockedUser findByOwner_First(long ownerId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMBlockedUserException, SystemException {
-		List<PMBlockedUser> list = findByOwner(ownerId, 0, 1, orderByComparator);
+		PMBlockedUser pmBlockedUser = fetchByOwner_First(ownerId,
+				orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(4);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("ownerId=");
-			msg.append(ownerId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMBlockedUserException(msg.toString());
+		if (pmBlockedUser != null) {
+			return pmBlockedUser;
 		}
-		else {
-			return list.get(0);
-		}
+
+		StringBundler msg = new StringBundler(4);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("ownerId=");
+		msg.append(ownerId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMBlockedUserException(msg.toString());
 	}
 
 	/**
-	 * Finds the last p m blocked user in the ordered set where ownerId = &#63;.
+	 * Returns the first p m blocked user in the ordered set where ownerId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * @param ownerId the owner ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the first matching p m blocked user, or <code>null</code> if a matching p m blocked user could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMBlockedUser fetchByOwner_First(long ownerId,
+		OrderByComparator orderByComparator) throws SystemException {
+		List<PMBlockedUser> list = findByOwner(ownerId, 0, 1, orderByComparator);
+
+		if (!list.isEmpty()) {
+			return list.get(0);
+		}
+
+		return null;
+	}
+
+	/**
+	 * Returns the last p m blocked user in the ordered set where ownerId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the last matching p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a matching p m blocked user could not be found
 	 * @throws SystemException if a system exception occurred
@@ -923,38 +1109,53 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	public PMBlockedUser findByOwner_Last(long ownerId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMBlockedUserException, SystemException {
+		PMBlockedUser pmBlockedUser = fetchByOwner_Last(ownerId,
+				orderByComparator);
+
+		if (pmBlockedUser != null) {
+			return pmBlockedUser;
+		}
+
+		StringBundler msg = new StringBundler(4);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("ownerId=");
+		msg.append(ownerId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMBlockedUserException(msg.toString());
+	}
+
+	/**
+	 * Returns the last p m blocked user in the ordered set where ownerId = &#63;.
+	 *
+	 * @param ownerId the owner ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the last matching p m blocked user, or <code>null</code> if a matching p m blocked user could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMBlockedUser fetchByOwner_Last(long ownerId,
+		OrderByComparator orderByComparator) throws SystemException {
 		int count = countByOwner(ownerId);
 
 		List<PMBlockedUser> list = findByOwner(ownerId, count - 1, count,
 				orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(4);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("ownerId=");
-			msg.append(ownerId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMBlockedUserException(msg.toString());
-		}
-		else {
+		if (!list.isEmpty()) {
 			return list.get(0);
 		}
+
+		return null;
 	}
 
 	/**
-	 * Finds the p m blocked users before and after the current p m blocked user in the ordered set where ownerId = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * Returns the p m blocked users before and after the current p m blocked user in the ordered set where ownerId = &#63;.
 	 *
 	 * @param blockedUserId the primary key of the current p m blocked user
-	 * @param ownerId the owner id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param ownerId the owner ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the previous, current, and next p m blocked user
 	 * @throws com.dharma.NoSuchPMBlockedUserException if a p m blocked user with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -1007,17 +1208,17 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		query.append(_FINDER_COLUMN_OWNER_OWNERID_2);
 
 		if (orderByComparator != null) {
-			String[] orderByFields = orderByComparator.getOrderByFields();
+			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
 
-			if (orderByFields.length > 0) {
+			if (orderByConditionFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByFields.length; i++) {
+			for (int i = 0; i < orderByConditionFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByFields[i]);
+				query.append(orderByConditionFields[i]);
 
-				if ((i + 1) < orderByFields.length) {
+				if ((i + 1) < orderByConditionFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -1036,6 +1237,8 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			}
 
 			query.append(ORDER_BY_CLAUSE);
+
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -1076,7 +1279,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		qPos.add(ownerId);
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByValues(pmBlockedUser);
+			Object[] values = orderByComparator.getOrderByConditionValues(pmBlockedUser);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -1094,7 +1297,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds all the p m blocked users.
+	 * Returns all the p m blocked users.
 	 *
 	 * @return the p m blocked users
 	 * @throws SystemException if a system exception occurred
@@ -1104,14 +1307,14 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds a range of all the p m blocked users.
+	 * Returns a range of all the p m blocked users.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
 	 * @return the range of p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1121,51 +1324,59 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Finds an ordered range of all the p m blocked users.
+	 * Returns an ordered range of all the p m blocked users.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of p m blocked users to return
-	 * @param end the upper bound of the range of p m blocked users to return (not inclusive)
-	 * @param orderByComparator the comparator to order the results by
+	 * @param start the lower bound of the range of p m blocked users
+	 * @param end the upper bound of the range of p m blocked users (not inclusive)
+	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
 	 * @return the ordered range of p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<PMBlockedUser> findAll(int start, int end,
 		OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] {
-				String.valueOf(start), String.valueOf(end),
-				String.valueOf(orderByComparator)
-			};
+		FinderPath finderPath = null;
+		Object[] finderArgs = new Object[] { start, end, orderByComparator };
 
-		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(FINDER_PATH_FIND_ALL,
+		if ((start == QueryUtil.ALL_POS) && (end == QueryUtil.ALL_POS) &&
+				(orderByComparator == null)) {
+			finderPath = FINDER_PATH_WITHOUT_PAGINATION_FIND_ALL;
+			finderArgs = FINDER_ARGS_EMPTY;
+		}
+		else {
+			finderPath = FINDER_PATH_WITH_PAGINATION_FIND_ALL;
+			finderArgs = new Object[] { start, end, orderByComparator };
+		}
+
+		List<PMBlockedUser> list = (List<PMBlockedUser>)FinderCacheUtil.getResult(finderPath,
 				finderArgs, this);
 
 		if (list == null) {
+			StringBundler query = null;
+			String sql = null;
+
+			if (orderByComparator != null) {
+				query = new StringBundler(2 +
+						(orderByComparator.getOrderByFields().length * 3));
+
+				query.append(_SQL_SELECT_PMBLOCKEDUSER);
+
+				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
+					orderByComparator);
+
+				sql = query.toString();
+			}
+			else {
+				sql = _SQL_SELECT_PMBLOCKEDUSER.concat(PMBlockedUserModelImpl.ORDER_BY_JPQL);
+			}
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = null;
-				String sql = null;
-
-				if (orderByComparator != null) {
-					query = new StringBundler(2 +
-							(orderByComparator.getOrderByFields().length * 3));
-
-					query.append(_SQL_SELECT_PMBLOCKEDUSER);
-
-					appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-						orderByComparator);
-
-					sql = query.toString();
-				}
-				else {
-					sql = _SQL_SELECT_PMBLOCKEDUSER.concat(PMBlockedUserModelImpl.ORDER_BY_JPQL);
-				}
 
 				Query q = session.createQuery(sql);
 
@@ -1185,12 +1396,13 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 			}
 			finally {
 				if (list == null) {
-					list = new ArrayList<PMBlockedUser>();
+					FinderCacheUtil.removeResult(finderPath, finderArgs);
 				}
+				else {
+					cacheResult(list);
 
-				cacheResult(list);
-
-				FinderCacheUtil.putResult(FINDER_PATH_FIND_ALL, finderArgs, list);
+					FinderCacheUtil.putResult(finderPath, finderArgs, list);
+				}
 
 				closeSession(session);
 			}
@@ -1202,8 +1414,8 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	/**
 	 * Removes all the p m blocked users where ownerId = &#63; and userId = &#63; from the database.
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByOwnerAndUser(long ownerId, long userId)
@@ -1216,7 +1428,7 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	/**
 	 * Removes all the p m blocked users where ownerId = &#63; from the database.
 	 *
-	 * @param ownerId the owner id to search with
+	 * @param ownerId the owner ID
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByOwner(long ownerId) throws SystemException {
@@ -1237,10 +1449,10 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Counts all the p m blocked users where ownerId = &#63; and userId = &#63;.
+	 * Returns the number of p m blocked users where ownerId = &#63; and userId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
-	 * @param userId the user id to search with
+	 * @param ownerId the owner ID
+	 * @param userId the user ID
 	 * @return the number of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1252,20 +1464,20 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 				finderArgs, this);
 
 		if (count == null) {
+			StringBundler query = new StringBundler(3);
+
+			query.append(_SQL_COUNT_PMBLOCKEDUSER_WHERE);
+
+			query.append(_FINDER_COLUMN_OWNERANDUSER_OWNERID_2);
+
+			query.append(_FINDER_COLUMN_OWNERANDUSER_USERID_2);
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = new StringBundler(3);
-
-				query.append(_SQL_COUNT_PMBLOCKEDUSER_WHERE);
-
-				query.append(_FINDER_COLUMN_OWNERANDUSER_OWNERID_2);
-
-				query.append(_FINDER_COLUMN_OWNERANDUSER_USERID_2);
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -1296,9 +1508,9 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Counts all the p m blocked users where ownerId = &#63;.
+	 * Returns the number of p m blocked users where ownerId = &#63;.
 	 *
-	 * @param ownerId the owner id to search with
+	 * @param ownerId the owner ID
 	 * @return the number of matching p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -1309,18 +1521,18 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 				finderArgs, this);
 
 		if (count == null) {
+			StringBundler query = new StringBundler(2);
+
+			query.append(_SQL_COUNT_PMBLOCKEDUSER_WHERE);
+
+			query.append(_FINDER_COLUMN_OWNER_OWNERID_2);
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = new StringBundler(2);
-
-				query.append(_SQL_COUNT_PMBLOCKEDUSER_WHERE);
-
-				query.append(_FINDER_COLUMN_OWNER_OWNERID_2);
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -1349,16 +1561,14 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	}
 
 	/**
-	 * Counts all the p m blocked users.
+	 * Returns the number of p m blocked users.
 	 *
 	 * @return the number of p m blocked users
 	 * @throws SystemException if a system exception occurred
 	 */
 	public int countAll() throws SystemException {
-		Object[] finderArgs = new Object[0];
-
 		Long count = (Long)FinderCacheUtil.getResult(FINDER_PATH_COUNT_ALL,
-				finderArgs, this);
+				FINDER_ARGS_EMPTY, this);
 
 		if (count == null) {
 			Session session = null;
@@ -1378,8 +1588,8 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 					count = Long.valueOf(0);
 				}
 
-				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL, finderArgs,
-					count);
+				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL,
+					FINDER_ARGS_EMPTY, count);
 
 				closeSession(session);
 			}
@@ -1413,14 +1623,20 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 		}
 	}
 
-	@BeanReference(type = PMMessagePersistence.class)
-	protected PMMessagePersistence pmMessagePersistence;
-	@BeanReference(type = PMDeletedMessagePersistence.class)
-	protected PMDeletedMessagePersistence pmDeletedMessagePersistence;
-	@BeanReference(type = PMReadMessagePersistence.class)
-	protected PMReadMessagePersistence pmReadMessagePersistence;
+	public void destroy() {
+		EntityCacheUtil.removeCache(PMBlockedUserImpl.class.getName());
+		FinderCacheUtil.removeCache(FINDER_CLASS_NAME_ENTITY);
+		FinderCacheUtil.removeCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+	}
+
 	@BeanReference(type = PMBlockedUserPersistence.class)
 	protected PMBlockedUserPersistence pmBlockedUserPersistence;
+	@BeanReference(type = PMDeletedMessagePersistence.class)
+	protected PMDeletedMessagePersistence pmDeletedMessagePersistence;
+	@BeanReference(type = PMMessagePersistence.class)
+	protected PMMessagePersistence pmMessagePersistence;
+	@BeanReference(type = PMReadMessagePersistence.class)
+	protected PMReadMessagePersistence pmReadMessagePersistence;
 	@BeanReference(type = ResourcePersistence.class)
 	protected ResourcePersistence resourcePersistence;
 	@BeanReference(type = UserPersistence.class)
@@ -1435,5 +1651,24 @@ public class PMBlockedUserPersistenceImpl extends BasePersistenceImpl<PMBlockedU
 	private static final String _ORDER_BY_ENTITY_ALIAS = "pmBlockedUser.";
 	private static final String _NO_SUCH_ENTITY_WITH_PRIMARY_KEY = "No PMBlockedUser exists with the primary key ";
 	private static final String _NO_SUCH_ENTITY_WITH_KEY = "No PMBlockedUser exists with the key {";
+	private static final boolean _HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE = GetterUtil.getBoolean(PropsUtil.get(
+				PropsKeys.HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE));
 	private static Log _log = LogFactoryUtil.getLog(PMBlockedUserPersistenceImpl.class);
+	private static PMBlockedUser _nullPMBlockedUser = new PMBlockedUserImpl() {
+			@Override
+			public Object clone() {
+				return this;
+			}
+
+			@Override
+			public CacheModel<PMBlockedUser> toCacheModel() {
+				return _nullPMBlockedUserCacheModel;
+			}
+		};
+
+	private static CacheModel<PMBlockedUser> _nullPMBlockedUserCacheModel = new CacheModel<PMBlockedUser>() {
+			public PMBlockedUser toEntityModel() {
+				return _nullPMBlockedUser;
+			}
+		};
 }
