@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2010 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -21,7 +21,7 @@ import com.dharma.model.impl.PMReadMessageImpl;
 import com.dharma.model.impl.PMReadMessageModelImpl;
 
 import com.liferay.portal.NoSuchModelException;
-import com.liferay.portal.kernel.annotation.BeanReference;
+import com.liferay.portal.kernel.bean.BeanReference;
 import com.liferay.portal.kernel.cache.CacheRegistryUtil;
 import com.liferay.portal.kernel.dao.orm.EntityCacheUtil;
 import com.liferay.portal.kernel.dao.orm.FinderCacheUtil;
@@ -36,9 +36,12 @@ import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.InstanceFactory;
 import com.liferay.portal.kernel.util.OrderByComparator;
+import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.PropsUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.model.CacheModel;
 import com.liferay.portal.model.ModelListener;
 import com.liferay.portal.service.persistence.BatchSessionUtil;
 import com.liferay.portal.service.persistence.ResourcePersistence;
@@ -55,10 +58,6 @@ import java.util.List;
  * The persistence implementation for the p m read message service.
  *
  * <p>
- * Never modify or reference this class directly. Always use {@link PMReadMessageUtil} to access the p m read message persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
- * </p>
- *
- * <p>
  * Caching information and settings can be found in <code>portal.properties</code>
  * </p>
  *
@@ -69,52 +68,76 @@ import java.util.List;
  */
 public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMessage>
 	implements PMReadMessagePersistence {
+	/*
+	 * NOTE FOR DEVELOPERS:
+	 *
+	 * Never modify or reference this class directly. Always use {@link PMReadMessageUtil} to access the p m read message persistence. Modify <code>service.xml</code> and rerun ServiceBuilder to regenerate this class.
+	 */
 	public static final String FINDER_CLASS_NAME_ENTITY = PMReadMessageImpl.class.getName();
-	public static final String FINDER_CLASS_NAME_LIST = FINDER_CLASS_NAME_ENTITY +
-		".List";
-	public static final FinderPath FINDER_PATH_FIND_BY_MESSAGEID = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+	public static final String FINDER_CLASS_NAME_LIST_WITH_PAGINATION = FINDER_CLASS_NAME_ENTITY +
+		".List1";
+	public static final String FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION = FINDER_CLASS_NAME_ENTITY +
+		".List2";
+	public static final FinderPath FINDER_PATH_WITH_PAGINATION_FIND_BY_MESSAGEID =
+		new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
 			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "findByMessageId",
+			PMReadMessageImpl.class, FINDER_CLASS_NAME_LIST_WITH_PAGINATION,
+			"findByMessageId",
 			new String[] {
 				Long.class.getName(),
 				
 			"java.lang.Integer", "java.lang.Integer",
 				"com.liferay.portal.kernel.util.OrderByComparator"
 			});
+	public static final FinderPath FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_MESSAGEID =
+		new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
+			PMReadMessageImpl.class, FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION,
+			"findByMessageId", new String[] { Long.class.getName() },
+			PMReadMessageModelImpl.MESSAGEID_COLUMN_BITMASK);
 	public static final FinderPath FINDER_PATH_COUNT_BY_MESSAGEID = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
-			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "countByMessageId",
+			PMReadMessageModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION, "countByMessageId",
 			new String[] { Long.class.getName() });
-	public static final FinderPath FINDER_PATH_FIND_ALL = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+	public static final FinderPath FINDER_PATH_WITH_PAGINATION_FIND_ALL = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
 			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "findAll", new String[0]);
+			PMReadMessageImpl.class, FINDER_CLASS_NAME_LIST_WITH_PAGINATION,
+			"findAll", new String[0]);
+	public static final FinderPath FINDER_PATH_WITHOUT_PAGINATION_FIND_ALL = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
+			PMReadMessageImpl.class, FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION,
+			"findAll", new String[0]);
 	public static final FinderPath FINDER_PATH_COUNT_ALL = new FinderPath(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
-			PMReadMessageModelImpl.FINDER_CACHE_ENABLED,
-			FINDER_CLASS_NAME_LIST, "countAll", new String[0]);
+			PMReadMessageModelImpl.FINDER_CACHE_ENABLED, Long.class,
+			FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION, "countAll", new String[0]);
 
 	/**
 	 * Caches the p m read message in the entity cache if it is enabled.
 	 *
-	 * @param pmReadMessage the p m read message to cache
+	 * @param pmReadMessage the p m read message
 	 */
 	public void cacheResult(PMReadMessage pmReadMessage) {
 		EntityCacheUtil.putResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
 			PMReadMessageImpl.class, pmReadMessage.getPrimaryKey(),
 			pmReadMessage);
+
+		pmReadMessage.resetOriginalValues();
 	}
 
 	/**
 	 * Caches the p m read messages in the entity cache if it is enabled.
 	 *
-	 * @param pmReadMessages the p m read messages to cache
+	 * @param pmReadMessages the p m read messages
 	 */
 	public void cacheResult(List<PMReadMessage> pmReadMessages) {
 		for (PMReadMessage pmReadMessage : pmReadMessages) {
 			if (EntityCacheUtil.getResult(
 						PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
-						PMReadMessageImpl.class, pmReadMessage.getPrimaryKey(),
-						this) == null) {
+						PMReadMessageImpl.class, pmReadMessage.getPrimaryKey()) == null) {
 				cacheResult(pmReadMessage);
+			}
+			else {
+				pmReadMessage.resetOriginalValues();
 			}
 		}
 	}
@@ -126,11 +149,17 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
+	@Override
 	public void clearCache() {
-		CacheRegistryUtil.clear(PMReadMessageImpl.class.getName());
+		if (_HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE) {
+			CacheRegistryUtil.clear(PMReadMessageImpl.class.getName());
+		}
+
 		EntityCacheUtil.clearCache(PMReadMessageImpl.class.getName());
+
 		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_ENTITY);
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
 	}
 
 	/**
@@ -140,9 +169,24 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	 * The {@link com.liferay.portal.kernel.dao.orm.EntityCache} and {@link com.liferay.portal.kernel.dao.orm.FinderCache} are both cleared by this method.
 	 * </p>
 	 */
+	@Override
 	public void clearCache(PMReadMessage pmReadMessage) {
 		EntityCacheUtil.removeResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
 			PMReadMessageImpl.class, pmReadMessage.getPrimaryKey());
+
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+	}
+
+	@Override
+	public void clearCache(List<PMReadMessage> pmReadMessages) {
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+
+		for (PMReadMessage pmReadMessage : pmReadMessages) {
+			EntityCacheUtil.removeResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+				PMReadMessageImpl.class, pmReadMessage.getPrimaryKey());
+		}
 	}
 
 	/**
@@ -163,25 +207,26 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	/**
 	 * Removes the p m read message with the primary key from the database. Also notifies the appropriate model listeners.
 	 *
-	 * @param primaryKey the primary key of the p m read message to remove
-	 * @return the p m read message that was removed
-	 * @throws com.liferay.portal.NoSuchModelException if a p m read message with the primary key could not be found
-	 * @throws SystemException if a system exception occurred
-	 */
-	public PMReadMessage remove(Serializable primaryKey)
-		throws NoSuchModelException, SystemException {
-		return remove(((Long)primaryKey).longValue());
-	}
-
-	/**
-	 * Removes the p m read message with the primary key from the database. Also notifies the appropriate model listeners.
-	 *
-	 * @param readMessageId the primary key of the p m read message to remove
+	 * @param readMessageId the primary key of the p m read message
 	 * @return the p m read message that was removed
 	 * @throws com.dharma.NoSuchPMReadMessageException if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public PMReadMessage remove(long readMessageId)
+		throws NoSuchPMReadMessageException, SystemException {
+		return remove(Long.valueOf(readMessageId));
+	}
+
+	/**
+	 * Removes the p m read message with the primary key from the database. Also notifies the appropriate model listeners.
+	 *
+	 * @param primaryKey the primary key of the p m read message
+	 * @return the p m read message that was removed
+	 * @throws com.dharma.NoSuchPMReadMessageException if a p m read message with the primary key could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	@Override
+	public PMReadMessage remove(Serializable primaryKey)
 		throws NoSuchPMReadMessageException, SystemException {
 		Session session = null;
 
@@ -189,15 +234,15 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			session = openSession();
 
 			PMReadMessage pmReadMessage = (PMReadMessage)session.get(PMReadMessageImpl.class,
-					new Long(readMessageId));
+					primaryKey);
 
 			if (pmReadMessage == null) {
 				if (_log.isWarnEnabled()) {
-					_log.warn(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY + readMessageId);
+					_log.warn(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY + primaryKey);
 				}
 
 				throw new NoSuchPMReadMessageException(_NO_SUCH_ENTITY_WITH_PRIMARY_KEY +
-					readMessageId);
+					primaryKey);
 			}
 
 			return remove(pmReadMessage);
@@ -213,6 +258,7 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 		}
 	}
 
+	@Override
 	protected PMReadMessage removeImpl(PMReadMessage pmReadMessage)
 		throws SystemException {
 		pmReadMessage = toUnwrappedModel(pmReadMessage);
@@ -222,18 +268,7 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 		try {
 			session = openSession();
 
-			if (pmReadMessage.isCachedModel() || BatchSessionUtil.isEnabled()) {
-				Object staleObject = session.get(PMReadMessageImpl.class,
-						pmReadMessage.getPrimaryKeyObj());
-
-				if (staleObject != null) {
-					session.evict(staleObject);
-				}
-			}
-
-			session.delete(pmReadMessage);
-
-			session.flush();
+			BatchSessionUtil.delete(session, pmReadMessage);
 		}
 		catch (Exception e) {
 			throw processException(e);
@@ -242,18 +277,20 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			closeSession(session);
 		}
 
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
-
-		EntityCacheUtil.removeResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
-			PMReadMessageImpl.class, pmReadMessage.getPrimaryKey());
+		clearCache(pmReadMessage);
 
 		return pmReadMessage;
 	}
 
+	@Override
 	public PMReadMessage updateImpl(
 		com.dharma.model.PMReadMessage pmReadMessage, boolean merge)
 		throws SystemException {
 		pmReadMessage = toUnwrappedModel(pmReadMessage);
+
+		boolean isNew = pmReadMessage.isNew();
+
+		PMReadMessageModelImpl pmReadMessageModelImpl = (PMReadMessageModelImpl)pmReadMessage;
 
 		Session session = null;
 
@@ -271,7 +308,34 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			closeSession(session);
 		}
 
-		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST);
+		FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITH_PAGINATION);
+
+		if (isNew || !PMReadMessageModelImpl.COLUMN_BITMASK_ENABLED) {
+			FinderCacheUtil.clearCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+		}
+
+		else {
+			if ((pmReadMessageModelImpl.getColumnBitmask() &
+					FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_MESSAGEID.getColumnBitmask()) != 0) {
+				Object[] args = new Object[] {
+						Long.valueOf(pmReadMessageModelImpl.getOriginalMessageId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_MESSAGEID,
+					args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_MESSAGEID,
+					args);
+
+				args = new Object[] {
+						Long.valueOf(pmReadMessageModelImpl.getMessageId())
+					};
+
+				FinderCacheUtil.removeResult(FINDER_PATH_COUNT_BY_MESSAGEID,
+					args);
+				FinderCacheUtil.removeResult(FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_MESSAGEID,
+					args);
+			}
+		}
 
 		EntityCacheUtil.putResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
 			PMReadMessageImpl.class, pmReadMessage.getPrimaryKey(),
@@ -298,22 +362,23 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds the p m read message with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
+	 * Returns the p m read message with the primary key or throws a {@link com.liferay.portal.NoSuchModelException} if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the p m read message to find
+	 * @param primaryKey the primary key of the p m read message
 	 * @return the p m read message
 	 * @throws com.liferay.portal.NoSuchModelException if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
+	@Override
 	public PMReadMessage findByPrimaryKey(Serializable primaryKey)
 		throws NoSuchModelException, SystemException {
 		return findByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Finds the p m read message with the primary key or throws a {@link com.dharma.NoSuchPMReadMessageException} if it could not be found.
+	 * Returns the p m read message with the primary key or throws a {@link com.dharma.NoSuchPMReadMessageException} if it could not be found.
 	 *
-	 * @param readMessageId the primary key of the p m read message to find
+	 * @param readMessageId the primary key of the p m read message
 	 * @return the p m read message
 	 * @throws com.dharma.NoSuchPMReadMessageException if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -335,44 +400,58 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds the p m read message with the primary key or returns <code>null</code> if it could not be found.
+	 * Returns the p m read message with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param primaryKey the primary key of the p m read message to find
+	 * @param primaryKey the primary key of the p m read message
 	 * @return the p m read message, or <code>null</code> if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
+	@Override
 	public PMReadMessage fetchByPrimaryKey(Serializable primaryKey)
 		throws SystemException {
 		return fetchByPrimaryKey(((Long)primaryKey).longValue());
 	}
 
 	/**
-	 * Finds the p m read message with the primary key or returns <code>null</code> if it could not be found.
+	 * Returns the p m read message with the primary key or returns <code>null</code> if it could not be found.
 	 *
-	 * @param readMessageId the primary key of the p m read message to find
+	 * @param readMessageId the primary key of the p m read message
 	 * @return the p m read message, or <code>null</code> if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
 	 */
 	public PMReadMessage fetchByPrimaryKey(long readMessageId)
 		throws SystemException {
 		PMReadMessage pmReadMessage = (PMReadMessage)EntityCacheUtil.getResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
-				PMReadMessageImpl.class, readMessageId, this);
+				PMReadMessageImpl.class, readMessageId);
+
+		if (pmReadMessage == _nullPMReadMessage) {
+			return null;
+		}
 
 		if (pmReadMessage == null) {
 			Session session = null;
+
+			boolean hasException = false;
 
 			try {
 				session = openSession();
 
 				pmReadMessage = (PMReadMessage)session.get(PMReadMessageImpl.class,
-						new Long(readMessageId));
+						Long.valueOf(readMessageId));
 			}
 			catch (Exception e) {
+				hasException = true;
+
 				throw processException(e);
 			}
 			finally {
 				if (pmReadMessage != null) {
 					cacheResult(pmReadMessage);
+				}
+				else if (!hasException) {
+					EntityCacheUtil.putResult(PMReadMessageModelImpl.ENTITY_CACHE_ENABLED,
+						PMReadMessageImpl.class, readMessageId,
+						_nullPMReadMessage);
 				}
 
 				closeSession(session);
@@ -383,9 +462,9 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds all the p m read messages where messageId = &#63;.
+	 * Returns all the p m read messages where messageId = &#63;.
 	 *
-	 * @param messageId the message id to search with
+	 * @param messageId the message ID
 	 * @return the matching p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -396,15 +475,15 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds a range of all the p m read messages where messageId = &#63;.
+	 * Returns a range of all the p m read messages where messageId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param messageId the message id to search with
-	 * @param start the lower bound of the range of p m read messages to return
-	 * @param end the upper bound of the range of p m read messages to return (not inclusive)
+	 * @param messageId the message ID
+	 * @param start the lower bound of the range of p m read messages
+	 * @param end the upper bound of the range of p m read messages (not inclusive)
 	 * @return the range of matching p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -414,61 +493,77 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds an ordered range of all the p m read messages where messageId = &#63;.
+	 * Returns an ordered range of all the p m read messages where messageId = &#63;.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param messageId the message id to search with
-	 * @param start the lower bound of the range of p m read messages to return
-	 * @param end the upper bound of the range of p m read messages to return (not inclusive)
-	 * @param orderByComparator the comparator to order the results by
+	 * @param messageId the message ID
+	 * @param start the lower bound of the range of p m read messages
+	 * @param end the upper bound of the range of p m read messages (not inclusive)
+	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
 	 * @return the ordered range of matching p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<PMReadMessage> findByMessageId(long messageId, int start,
 		int end, OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] {
-				messageId,
-				
-				String.valueOf(start), String.valueOf(end),
-				String.valueOf(orderByComparator)
-			};
+		FinderPath finderPath = null;
+		Object[] finderArgs = null;
 
-		List<PMReadMessage> list = (List<PMReadMessage>)FinderCacheUtil.getResult(FINDER_PATH_FIND_BY_MESSAGEID,
+		if ((start == QueryUtil.ALL_POS) && (end == QueryUtil.ALL_POS) &&
+				(orderByComparator == null)) {
+			finderPath = FINDER_PATH_WITHOUT_PAGINATION_FIND_BY_MESSAGEID;
+			finderArgs = new Object[] { messageId };
+		}
+		else {
+			finderPath = FINDER_PATH_WITH_PAGINATION_FIND_BY_MESSAGEID;
+			finderArgs = new Object[] { messageId, start, end, orderByComparator };
+		}
+
+		List<PMReadMessage> list = (List<PMReadMessage>)FinderCacheUtil.getResult(finderPath,
 				finderArgs, this);
 
+		if ((list != null) && !list.isEmpty()) {
+			for (PMReadMessage pmReadMessage : list) {
+				if ((messageId != pmReadMessage.getMessageId())) {
+					list = null;
+
+					break;
+				}
+			}
+		}
+
 		if (list == null) {
+			StringBundler query = null;
+
+			if (orderByComparator != null) {
+				query = new StringBundler(3 +
+						(orderByComparator.getOrderByFields().length * 3));
+			}
+			else {
+				query = new StringBundler(3);
+			}
+
+			query.append(_SQL_SELECT_PMREADMESSAGE_WHERE);
+
+			query.append(_FINDER_COLUMN_MESSAGEID_MESSAGEID_2);
+
+			if (orderByComparator != null) {
+				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
+					orderByComparator);
+			}
+
+			else {
+				query.append(PMReadMessageModelImpl.ORDER_BY_JPQL);
+			}
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = null;
-
-				if (orderByComparator != null) {
-					query = new StringBundler(3 +
-							(orderByComparator.getOrderByFields().length * 3));
-				}
-				else {
-					query = new StringBundler(3);
-				}
-
-				query.append(_SQL_SELECT_PMREADMESSAGE_WHERE);
-
-				query.append(_FINDER_COLUMN_MESSAGEID_MESSAGEID_2);
-
-				if (orderByComparator != null) {
-					appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-						orderByComparator);
-				}
-
-				else {
-					query.append(PMReadMessageModelImpl.ORDER_BY_JPQL);
-				}
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -484,13 +579,13 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			}
 			finally {
 				if (list == null) {
-					list = new ArrayList<PMReadMessage>();
+					FinderCacheUtil.removeResult(finderPath, finderArgs);
 				}
+				else {
+					cacheResult(list);
 
-				cacheResult(list);
-
-				FinderCacheUtil.putResult(FINDER_PATH_FIND_BY_MESSAGEID,
-					finderArgs, list);
+					FinderCacheUtil.putResult(finderPath, finderArgs, list);
+				}
 
 				closeSession(session);
 			}
@@ -500,14 +595,10 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds the first p m read message in the ordered set where messageId = &#63;.
+	 * Returns the first p m read message in the ordered set where messageId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
-	 *
-	 * @param messageId the message id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param messageId the message ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the first matching p m read message
 	 * @throws com.dharma.NoSuchPMReadMessageException if a matching p m read message could not be found
 	 * @throws SystemException if a system exception occurred
@@ -515,35 +606,50 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	public PMReadMessage findByMessageId_First(long messageId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMReadMessageException, SystemException {
-		List<PMReadMessage> list = findByMessageId(messageId, 0, 1,
+		PMReadMessage pmReadMessage = fetchByMessageId_First(messageId,
 				orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(4);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("messageId=");
-			msg.append(messageId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMReadMessageException(msg.toString());
+		if (pmReadMessage != null) {
+			return pmReadMessage;
 		}
-		else {
-			return list.get(0);
-		}
+
+		StringBundler msg = new StringBundler(4);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("messageId=");
+		msg.append(messageId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMReadMessageException(msg.toString());
 	}
 
 	/**
-	 * Finds the last p m read message in the ordered set where messageId = &#63;.
+	 * Returns the first p m read message in the ordered set where messageId = &#63;.
 	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * @param messageId the message ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the first matching p m read message, or <code>null</code> if a matching p m read message could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMReadMessage fetchByMessageId_First(long messageId,
+		OrderByComparator orderByComparator) throws SystemException {
+		List<PMReadMessage> list = findByMessageId(messageId, 0, 1,
+				orderByComparator);
+
+		if (!list.isEmpty()) {
+			return list.get(0);
+		}
+
+		return null;
+	}
+
+	/**
+	 * Returns the last p m read message in the ordered set where messageId = &#63;.
 	 *
-	 * @param messageId the message id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param messageId the message ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the last matching p m read message
 	 * @throws com.dharma.NoSuchPMReadMessageException if a matching p m read message could not be found
 	 * @throws SystemException if a system exception occurred
@@ -551,38 +657,53 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	public PMReadMessage findByMessageId_Last(long messageId,
 		OrderByComparator orderByComparator)
 		throws NoSuchPMReadMessageException, SystemException {
+		PMReadMessage pmReadMessage = fetchByMessageId_Last(messageId,
+				orderByComparator);
+
+		if (pmReadMessage != null) {
+			return pmReadMessage;
+		}
+
+		StringBundler msg = new StringBundler(4);
+
+		msg.append(_NO_SUCH_ENTITY_WITH_KEY);
+
+		msg.append("messageId=");
+		msg.append(messageId);
+
+		msg.append(StringPool.CLOSE_CURLY_BRACE);
+
+		throw new NoSuchPMReadMessageException(msg.toString());
+	}
+
+	/**
+	 * Returns the last p m read message in the ordered set where messageId = &#63;.
+	 *
+	 * @param messageId the message ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
+	 * @return the last matching p m read message, or <code>null</code> if a matching p m read message could not be found
+	 * @throws SystemException if a system exception occurred
+	 */
+	public PMReadMessage fetchByMessageId_Last(long messageId,
+		OrderByComparator orderByComparator) throws SystemException {
 		int count = countByMessageId(messageId);
 
 		List<PMReadMessage> list = findByMessageId(messageId, count - 1, count,
 				orderByComparator);
 
-		if (list.isEmpty()) {
-			StringBundler msg = new StringBundler(4);
-
-			msg.append(_NO_SUCH_ENTITY_WITH_KEY);
-
-			msg.append("messageId=");
-			msg.append(messageId);
-
-			msg.append(StringPool.CLOSE_CURLY_BRACE);
-
-			throw new NoSuchPMReadMessageException(msg.toString());
-		}
-		else {
+		if (!list.isEmpty()) {
 			return list.get(0);
 		}
+
+		return null;
 	}
 
 	/**
-	 * Finds the p m read messages before and after the current p m read message in the ordered set where messageId = &#63;.
-	 *
-	 * <p>
-	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
-	 * </p>
+	 * Returns the p m read messages before and after the current p m read message in the ordered set where messageId = &#63;.
 	 *
 	 * @param readMessageId the primary key of the current p m read message
-	 * @param messageId the message id to search with
-	 * @param orderByComparator the comparator to order the set by
+	 * @param messageId the message ID
+	 * @param orderByComparator the comparator to order the set by (optionally <code>null</code>)
 	 * @return the previous, current, and next p m read message
 	 * @throws com.dharma.NoSuchPMReadMessageException if a p m read message with the primary key could not be found
 	 * @throws SystemException if a system exception occurred
@@ -635,17 +756,17 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 		query.append(_FINDER_COLUMN_MESSAGEID_MESSAGEID_2);
 
 		if (orderByComparator != null) {
-			String[] orderByFields = orderByComparator.getOrderByFields();
+			String[] orderByConditionFields = orderByComparator.getOrderByConditionFields();
 
-			if (orderByFields.length > 0) {
+			if (orderByConditionFields.length > 0) {
 				query.append(WHERE_AND);
 			}
 
-			for (int i = 0; i < orderByFields.length; i++) {
+			for (int i = 0; i < orderByConditionFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
-				query.append(orderByFields[i]);
+				query.append(orderByConditionFields[i]);
 
-				if ((i + 1) < orderByFields.length) {
+				if ((i + 1) < orderByConditionFields.length) {
 					if (orderByComparator.isAscending() ^ previous) {
 						query.append(WHERE_GREATER_THAN_HAS_NEXT);
 					}
@@ -664,6 +785,8 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			}
 
 			query.append(ORDER_BY_CLAUSE);
+
+			String[] orderByFields = orderByComparator.getOrderByFields();
 
 			for (int i = 0; i < orderByFields.length; i++) {
 				query.append(_ORDER_BY_ENTITY_ALIAS);
@@ -704,7 +827,7 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 		qPos.add(messageId);
 
 		if (orderByComparator != null) {
-			Object[] values = orderByComparator.getOrderByValues(pmReadMessage);
+			Object[] values = orderByComparator.getOrderByConditionValues(pmReadMessage);
 
 			for (Object value : values) {
 				qPos.add(value);
@@ -722,7 +845,7 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds all the p m read messages.
+	 * Returns all the p m read messages.
 	 *
 	 * @return the p m read messages
 	 * @throws SystemException if a system exception occurred
@@ -732,14 +855,14 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds a range of all the p m read messages.
+	 * Returns a range of all the p m read messages.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of p m read messages to return
-	 * @param end the upper bound of the range of p m read messages to return (not inclusive)
+	 * @param start the lower bound of the range of p m read messages
+	 * @param end the upper bound of the range of p m read messages (not inclusive)
 	 * @return the range of p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -749,51 +872,59 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Finds an ordered range of all the p m read messages.
+	 * Returns an ordered range of all the p m read messages.
 	 *
 	 * <p>
 	 * Useful when paginating results. Returns a maximum of <code>end - start</code> instances. <code>start</code> and <code>end</code> are not primary keys, they are indexes in the result set. Thus, <code>0</code> refers to the first result in the set. Setting both <code>start</code> and <code>end</code> to {@link com.liferay.portal.kernel.dao.orm.QueryUtil#ALL_POS} will return the full result set.
 	 * </p>
 	 *
-	 * @param start the lower bound of the range of p m read messages to return
-	 * @param end the upper bound of the range of p m read messages to return (not inclusive)
-	 * @param orderByComparator the comparator to order the results by
+	 * @param start the lower bound of the range of p m read messages
+	 * @param end the upper bound of the range of p m read messages (not inclusive)
+	 * @param orderByComparator the comparator to order the results by (optionally <code>null</code>)
 	 * @return the ordered range of p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
 	public List<PMReadMessage> findAll(int start, int end,
 		OrderByComparator orderByComparator) throws SystemException {
-		Object[] finderArgs = new Object[] {
-				String.valueOf(start), String.valueOf(end),
-				String.valueOf(orderByComparator)
-			};
+		FinderPath finderPath = null;
+		Object[] finderArgs = new Object[] { start, end, orderByComparator };
 
-		List<PMReadMessage> list = (List<PMReadMessage>)FinderCacheUtil.getResult(FINDER_PATH_FIND_ALL,
+		if ((start == QueryUtil.ALL_POS) && (end == QueryUtil.ALL_POS) &&
+				(orderByComparator == null)) {
+			finderPath = FINDER_PATH_WITHOUT_PAGINATION_FIND_ALL;
+			finderArgs = FINDER_ARGS_EMPTY;
+		}
+		else {
+			finderPath = FINDER_PATH_WITH_PAGINATION_FIND_ALL;
+			finderArgs = new Object[] { start, end, orderByComparator };
+		}
+
+		List<PMReadMessage> list = (List<PMReadMessage>)FinderCacheUtil.getResult(finderPath,
 				finderArgs, this);
 
 		if (list == null) {
+			StringBundler query = null;
+			String sql = null;
+
+			if (orderByComparator != null) {
+				query = new StringBundler(2 +
+						(orderByComparator.getOrderByFields().length * 3));
+
+				query.append(_SQL_SELECT_PMREADMESSAGE);
+
+				appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
+					orderByComparator);
+
+				sql = query.toString();
+			}
+			else {
+				sql = _SQL_SELECT_PMREADMESSAGE.concat(PMReadMessageModelImpl.ORDER_BY_JPQL);
+			}
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = null;
-				String sql = null;
-
-				if (orderByComparator != null) {
-					query = new StringBundler(2 +
-							(orderByComparator.getOrderByFields().length * 3));
-
-					query.append(_SQL_SELECT_PMREADMESSAGE);
-
-					appendOrderByComparator(query, _ORDER_BY_ENTITY_ALIAS,
-						orderByComparator);
-
-					sql = query.toString();
-				}
-				else {
-					sql = _SQL_SELECT_PMREADMESSAGE.concat(PMReadMessageModelImpl.ORDER_BY_JPQL);
-				}
 
 				Query q = session.createQuery(sql);
 
@@ -813,12 +944,13 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 			}
 			finally {
 				if (list == null) {
-					list = new ArrayList<PMReadMessage>();
+					FinderCacheUtil.removeResult(finderPath, finderArgs);
 				}
+				else {
+					cacheResult(list);
 
-				cacheResult(list);
-
-				FinderCacheUtil.putResult(FINDER_PATH_FIND_ALL, finderArgs, list);
+					FinderCacheUtil.putResult(finderPath, finderArgs, list);
+				}
 
 				closeSession(session);
 			}
@@ -830,7 +962,7 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	/**
 	 * Removes all the p m read messages where messageId = &#63; from the database.
 	 *
-	 * @param messageId the message id to search with
+	 * @param messageId the message ID
 	 * @throws SystemException if a system exception occurred
 	 */
 	public void removeByMessageId(long messageId) throws SystemException {
@@ -851,9 +983,9 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Counts all the p m read messages where messageId = &#63;.
+	 * Returns the number of p m read messages where messageId = &#63;.
 	 *
-	 * @param messageId the message id to search with
+	 * @param messageId the message ID
 	 * @return the number of matching p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
@@ -864,18 +996,18 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 				finderArgs, this);
 
 		if (count == null) {
+			StringBundler query = new StringBundler(2);
+
+			query.append(_SQL_COUNT_PMREADMESSAGE_WHERE);
+
+			query.append(_FINDER_COLUMN_MESSAGEID_MESSAGEID_2);
+
+			String sql = query.toString();
+
 			Session session = null;
 
 			try {
 				session = openSession();
-
-				StringBundler query = new StringBundler(2);
-
-				query.append(_SQL_COUNT_PMREADMESSAGE_WHERE);
-
-				query.append(_FINDER_COLUMN_MESSAGEID_MESSAGEID_2);
-
-				String sql = query.toString();
 
 				Query q = session.createQuery(sql);
 
@@ -904,16 +1036,14 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	}
 
 	/**
-	 * Counts all the p m read messages.
+	 * Returns the number of p m read messages.
 	 *
 	 * @return the number of p m read messages
 	 * @throws SystemException if a system exception occurred
 	 */
 	public int countAll() throws SystemException {
-		Object[] finderArgs = new Object[0];
-
 		Long count = (Long)FinderCacheUtil.getResult(FINDER_PATH_COUNT_ALL,
-				finderArgs, this);
+				FINDER_ARGS_EMPTY, this);
 
 		if (count == null) {
 			Session session = null;
@@ -933,8 +1063,8 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 					count = Long.valueOf(0);
 				}
 
-				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL, finderArgs,
-					count);
+				FinderCacheUtil.putResult(FINDER_PATH_COUNT_ALL,
+					FINDER_ARGS_EMPTY, count);
 
 				closeSession(session);
 			}
@@ -968,14 +1098,20 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 		}
 	}
 
-	@BeanReference(type = PMMessagePersistence.class)
-	protected PMMessagePersistence pmMessagePersistence;
-	@BeanReference(type = PMDeletedMessagePersistence.class)
-	protected PMDeletedMessagePersistence pmDeletedMessagePersistence;
-	@BeanReference(type = PMReadMessagePersistence.class)
-	protected PMReadMessagePersistence pmReadMessagePersistence;
+	public void destroy() {
+		EntityCacheUtil.removeCache(PMReadMessageImpl.class.getName());
+		FinderCacheUtil.removeCache(FINDER_CLASS_NAME_ENTITY);
+		FinderCacheUtil.removeCache(FINDER_CLASS_NAME_LIST_WITHOUT_PAGINATION);
+	}
+
 	@BeanReference(type = PMBlockedUserPersistence.class)
 	protected PMBlockedUserPersistence pmBlockedUserPersistence;
+	@BeanReference(type = PMDeletedMessagePersistence.class)
+	protected PMDeletedMessagePersistence pmDeletedMessagePersistence;
+	@BeanReference(type = PMMessagePersistence.class)
+	protected PMMessagePersistence pmMessagePersistence;
+	@BeanReference(type = PMReadMessagePersistence.class)
+	protected PMReadMessagePersistence pmReadMessagePersistence;
 	@BeanReference(type = ResourcePersistence.class)
 	protected ResourcePersistence resourcePersistence;
 	@BeanReference(type = UserPersistence.class)
@@ -988,5 +1124,24 @@ public class PMReadMessagePersistenceImpl extends BasePersistenceImpl<PMReadMess
 	private static final String _ORDER_BY_ENTITY_ALIAS = "pmReadMessage.";
 	private static final String _NO_SUCH_ENTITY_WITH_PRIMARY_KEY = "No PMReadMessage exists with the primary key ";
 	private static final String _NO_SUCH_ENTITY_WITH_KEY = "No PMReadMessage exists with the key {";
+	private static final boolean _HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE = GetterUtil.getBoolean(PropsUtil.get(
+				PropsKeys.HIBERNATE_CACHE_USE_SECOND_LEVEL_CACHE));
 	private static Log _log = LogFactoryUtil.getLog(PMReadMessagePersistenceImpl.class);
+	private static PMReadMessage _nullPMReadMessage = new PMReadMessageImpl() {
+			@Override
+			public Object clone() {
+				return this;
+			}
+
+			@Override
+			public CacheModel<PMReadMessage> toCacheModel() {
+				return _nullPMReadMessageCacheModel;
+			}
+		};
+
+	private static CacheModel<PMReadMessage> _nullPMReadMessageCacheModel = new CacheModel<PMReadMessage>() {
+			public PMReadMessage toEntityModel() {
+				return _nullPMReadMessage;
+			}
+		};
 }
